--- a/index.html
+++ b/index.html
@@ -1055,7 +1055,7 @@
       <div class="container">
         <div class="copyright text-center ">
           <p>© <span>Copyright</span> <strong
-              class="px-1 sitename">iPortfolio</strong> <span>All Rights
+              class="px-1 sitename">Climate Change Warriors</strong> <span>All Rights
               Reserved</span></p>
         </div>
         <div class="credits">
